# chainlit_langgraph

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  update_packages.sh
.chainlit/: config.toml
.github/: funding.yml
alembic/: env.py
alembic/versions/: 10414f3fd0c9_initial_migration.py  e2a0c10ab218_create_langgraph_store.py
chat_workflow/: auth.py  llm.py  module_discovery.py  settings.py  state_serializer.py  storage_client.py
chat_workflow/graphs/: __init__.py  base.py  resume.py
chat_workflow/llm/: __init__.py  anthropic.py  capabilities.py  factory.py  ollama.py  openai.py  xai.py
chat_workflow/llm/providers/: __init__.py  anthropic.py  base.py  google.py  groq.py  ollama.py  openai.py  xai.py
chat_workflow/prompts/: __init__.py  thinking_claude.py
chat_workflow/tests/: test_llm.py  test_simple_chat.py
chat_workflow/tools/: __init__.py  search.py  time.py
chat_workflow/tools/search/: brave.py
chat_workflow/workflows/: base.py  lean_canvas_chat.py  multimodal_chat.py  resume_optimizer.py  simple_chat.py  workflow_factory.py
