[tool.poetry]
name = "chainlit-langgraph"
version = "0.1.0"
description = ""
authors = ["Bruce Chou <brucechou1983@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.1"
langgraph = "^0.2.31"
langchain-openai = "^0.2.1"
langchain-anthropic = "^0.2.1"
langchain-ollama = "^0.2.0"
langchain-google-vertexai = "^2.0.1"
chainlit = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
